--- a/auth/login.html
+++ b/auth/login.html
@@ -25,7 +25,7 @@
                         <label for="password">Password</label>
                         <input type="password" id="password" name="password" required>
                     </div>
-                    <button type="submit">Login</button>
+                    <button type="submit" id="submit">Login</button>
                 </form>
                 <p class="auth-link">Don't have an account? <a href="register.html">Register</a></p>
             </section>
